--- a/Tokoku.html
+++ b/Tokoku.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id" x-data="{ darkMode: false, layanan: 'pt', hari: 0, gb: 0 }" :class="darkMode ? 'dark' : ''">
+<html lang="id" x-data="{ darkMode: false, layanan: 'pt', hari: 0, gb: 0, isSubmitting: false }" :class="darkMode ? 'dark' : ''">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,8 +12,10 @@
       theme: {
         extend: {
           colors: {
-            primary: '#0a2540',
-            'primary-light': '#1e3a5f',
+            primary: '#4c1d95', // Dark purple
+            'primary-light': '#7c3aed', // Semi purple (medium purple for light mode)
+            'primary-dark': '#1e1b4b', // Darker purple for dark mode
+            'semi-purple': '#a855f7', // Light purple for accents
           },
           fontFamily: {
             sans: ['"Segoe UI"', 'Roboto', 'Helvetica', 'Arial', 'sans-serif']
@@ -23,26 +25,80 @@
     };
   </script>
 </head>
-<body class="bg-white text-gray-900 dark:bg-primary dark:text-gray-100 font-sans transition duration-300">
+<body class="bg-gradient-to-br from-purple-50 to-purple-100 text-gray-900 dark:bg-gradient-to-br dark:from-primary-dark dark:to-primary dark:text-gray-100 font-sans transition duration-300">
+
+  <!-- Navbar -->
+  <nav class="bg-gradient-to-r from-primary to-semi-purple text-white p-4 shadow-lg">
+    <div class="max-w-7xl mx-auto flex justify-between items-center">
+      <h1 class="text-xl font-bold">Rear OfficiaL</h1>
+      <ul class="flex space-x-6">
+        <li><a href="#about" class="hover:text-purple-200 transition">About</a></li>
+        <li><a href="#produk" class="hover:text-purple-200 transition">Produk</a></li>
+        <li><a href="#harga" class="hover:text-purple-200 transition">Harga & Pemesanan</a></li>
+        <li><a href="#kontak" class="hover:text-purple-200 transition">Kontak</a></li>
+      </ul>
+      <button @click="darkMode = !darkMode" class="bg-white text-primary px-3 py-1 rounded hover:bg-purple-100 text-sm dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600" aria-label="Toggle dark mode">
+        Toggle Tema
+      </button>
+    </div>
+  </nav>
 
   <!-- Header -->
-  <header class="bg-primary text-white p-6 flex justify-between items-center">
-    <div>
-      <h1 class="text-2xl font-bold">Rear OfficiaL</h1>
-      <p class="text-sm">Website Pemesanan Hosting Rear OfficiaL</p>
+  <header class="bg-gradient-to-r from-primary to-semi-purple text-white p-6 text-center shadow-xl">
+    <div class="mb-4">
+      <img src="https://img1.pixhost.to/images/9510/652504583_rulzz-official.jpg" alt="Logo Rear OfficiaL" class="w-24 h-24 rounded-full mx-auto border-4 border-white shadow-2xl" />
     </div>
-    <button @click="darkMode = !darkMode" class="bg-white text-primary px-3 py-1 rounded hover:bg-blue-100 text-sm dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600">
-      Toggle Tema
-    </button>
+    <h1 class="text-2xl font-bold">Rear OfficiaL</h1>
+    <p class="text-sm">Website Pemesanan Hosting Rear OfficiaL</p>
   </header>
 
-  <!-- Kalkulator Harga -->
-  <section class="py-10">
-    <div class="max-w-xl mx-auto px-4">
-      <h2 class="text-xl font-semibold text-primary mb-4 dark:text-blue-200">Produk Rear OfficiaL</h2>
+  <!-- About Section -->
+  <section id="about" class="py-10 bg-gradient-to-br from-purple-50 to-white dark:bg-gradient-to-br dark:from-primary-dark dark:to-primary-light">
+    <div class="max-w-4xl mx-auto px-4">
+      <h2 class="text-2xl font-semibold text-primary mb-4 dark:text-semi-purple">About</h2>
+      <p class="text-gray-700 dark:text-gray-300 mb-4">
+        Rear OfficiaL merupakan sebuah toko digital marketplace online yang menyediakan berbagai kebutuhan hosting, di mulai dari panel, vps, domain, subdomain, jasa jasa, akun cloud, dan lain sebagainya. Rear OfficiaL selalu menyediakan barang barang dengan harga termurah tetapi dengan kualitas yang gaharr🤑. Rear OfficiaL sudah mempunyai 500+ testimoni.
+      </p>
+      <h3 class="text-xl font-semibold text-primary mb-2 dark:text-semi-purple">Grub Rear OfficiaL</h3>
+      <p class="text-gray-700 dark:text-gray-300 mb-4">
+        Bebas Promosi, Terbuka 24 Jam, Anti Promosi 18+
+      </p>
+      <h3 class="text-xl font-semibold text-primary mb-2 dark:text-semi-purple">Kontak Rear OfficiaL</h3>
+      <p class="text-gray-700 dark:text-gray-300 mb-4">
+        <a href="https://t.me/rearofficial" class="text-semi-purple hover:underline dark:text-purple-300">https://t.me/rearofficial</a>
+      </p>
+      <h3 class="text-xl font-semibold text-primary mb-2 dark:text-semi-purple">Saluran Rear OfficiaL</h3>
+      <p class="text-gray-700 dark:text-gray-300 mb-4">
+        <a href="https://whatsapp.com/channel/0029Vb5ms4s59PwV7SyzEX2u" class="text-semi-purple hover:underline dark:text-purple-300">https://whatsapp.com/channel/0029Vb5ms4s59PwV7SyzEX2u</a>
+      </p>
+      <h3 class="text-xl font-semibold text-primary mb-2 dark:text-semi-purple">Partner Rear OfficiaL</h3>
+      <p class="text-gray-700 dark:text-gray-300">
+        Kami bekerja sama dengan berbagai partner untuk memberikan layanan terbaik.
+      </p>
+    </div>
+  </section>
 
-      <label class="block mb-1">Pilih layanan:</label>
-      <select x-model="layanan" @change="hari = 0; gb = 0" class="w-full p-2 border rounded mb-4 dark:bg-primary-light dark:border-gray-600 dark:text-white">
+  <!-- Produk Section -->
+  <section id="produk" class="py-10 bg-white dark:bg-primary-light">
+    <div class="max-w-4xl mx-auto px-4">
+      <h2 class="text-2xl font-semibold text-primary mb-4 dark:text-semi-purple">Produk Rear OfficiaL</h2>
+      <p class="text-gray-700 dark:text-gray-300 mb-4">
+        Menyediakan vps yang memiliki performa tinggi, aktif 1 bulan dan bisa di perpanjang.
+      </p>
+      <p class="text-gray-700 dark:text-gray-300 mb-4">
+        Dengan akun cloud anda bisa membuat dan menjual vps. Silakan cek harga dengan tekan tombol di bawah.
+      </p>
+      <a href="#harga" class="bg-gradient-to-r from-semi-purple to-primary text-white px-4 py-2 rounded hover:shadow-lg transition">Cek Harga</a>
+    </div>
+  </section>
+
+  <!-- Kalkulator Harga -->
+  <section id="harga" class="py-10 bg-gradient-to-br from-purple-50 to-white dark:bg-gradient-to-br dark:from-primary-dark dark:to-primary-light">
+    <div class="max-w-xl mx-auto px-4">
+      <h2 class="text-xl font-semibold text-primary mb-4 dark:text-semi-purple">Produk Rear OfficiaL</h2>
+
+      <label for="layanan-select" class="block mb-1">Pilih layanan:</label>
+      <select id="layanan-select" x-model="layanan" @change="hari = 0; gb = 0" class="w-full p-2 border border-purple-300 rounded mb-4 dark:bg-primary-light dark:border-purple-600 dark:text-white focus:ring-2 focus:ring-semi-purple" aria-label="Pilih layanan">
         <option value="pt">PT Panel - Rp25.000 (selamanya)</option>
         <option value="admin">Admin Panel - Rp15.000 (selamanya)</option>
         <option value="reseller">Reseller Panel - Rp7.000 (selamanya)</option>
@@ -51,19 +107,19 @@
       </select>
 
       <!-- Input Hari -->
-      <div x-show="layanan === 'wa'" class="mb-4 transition-all">
-        <label class="block mb-1">Jumlah Hari:</label>
-        <input type="number" x-model="hari" min="1" class="w-full p-2 border rounded dark:bg-primary-light dark:border-gray-600 dark:text-white" />
+      <div x-show="layanan === 'wa'" x-transition class="mb-4">
+        <label for="hari-input" class="block mb-1">Jumlah Hari:</label>
+        <input id="hari-input" type="number" x-model.number="hari" min="1" class="w-full p-2 border border-purple-300 rounded dark:bg-primary-light dark:border-purple-600 dark:text-white focus:ring-2 focus:ring-semi-purple" aria-label="Jumlah hari" />
       </div>
 
       <!-- Input GB -->
-      <div x-show="layanan === 'ptero'" class="mb-4 transition-all">
-        <label class="block mb-1">Jumlah GB RAM:</label>
-        <input type="number" x-model="gb" min="1" class="w-full p-2 border rounded dark:bg-primary-light dark:border-gray-600 dark:text-white" />
+      <div x-show="layanan === 'ptero'" x-transition class="mb-4">
+        <label for="gb-input" class="block mb-1">Jumlah GB RAM:</label>
+        <input id="gb-input" type="number" x-model.number="gb" min="1" class="w-full p-2 border border-purple-300 rounded dark:bg-primary-light dark:border-purple-600 dark:text-white focus:ring-2 focus:ring-semi-purple" aria-label="Jumlah GB RAM" />
       </div>
 
       <template x-if="layanan === 'pt' || layanan === 'admin' || layanan === 'reseller' || (layanan === 'wa' && hari >= 1) || (layanan === 'ptero' && gb >= 1)">
-        <p class="mt-4 font-semibold text-primary dark:text-blue-200">
+        <p class="mt-4 font-semibold text-primary dark:text-semi-purple" aria-live="polite">
           Total:
           <span x-text="layanan === 'pt' ? 'Rp25.000' :
                          layanan === 'admin' ? 'Rp15.000' :
@@ -77,18 +133,19 @@
   </section>
 
   <!-- Form Pemesanan -->
-  <section class="py-10 bg-white dark:bg-primary-light border-t dark:border-gray-600">
+  <section class="py-10 bg-white dark:bg-primary-light border-t border-purple-200 dark:border-purple-600">
     <div class="max-w-xl mx-auto px-4" x-data="{ nama: '', wa: '', catatan: '' }">
-      <h2 class="text-xl font-semibold text-primary mb-4 dark:text-blue-200">Form Pemesanan</h2>
+      <h2 class="text-xl font-semibold text-primary mb-4 dark:text-semi-purple">Form Pemesanan</h2>
 
-      <input x-model="nama" type="text" placeholder="Username" class="w-full p-2 border rounded mb-3 dark:bg-primary-light dark:border-gray-600 dark:text-white" />
-      <input x-model="wa" type="text" placeholder="Nomor WhatsApp Anda" class="w-full p-2 border rounded mb-3 dark:bg-primary-light dark:border-gray-600 dark:text-white" />
-      <textarea x-model="catatan" placeholder="Catatan tambahan (opsional)" class="w-full p-2 border rounded mb-4 dark:bg-primary-light dark:border-gray-600 dark:text-white"></textarea>
+      <input id="nama-input" x-model="nama" type="text" placeholder="Username" required class="w-full p-2 border border-purple-300 rounded mb-3 dark:bg-primary-light dark:border-purple-600 dark:text-white focus:ring-2 focus:ring-semi-purple" aria-label="Username" />
+      <input id="wa-input" x-model="wa" type="tel" placeholder="Nomor WhatsApp Anda" required class="w-full p-2 border border-purple-300 rounded mb-3 dark:bg-primary-light dark:border-purple-600 dark:text-white focus:ring-2 focus:ring-semi-purple" aria-label="Nomor WhatsApp" />
+      <textarea id="catatan-textarea" x-model="catatan" placeholder="Catatan tambahan (opsional)" class="w-full p-2 border border-purple-300 rounded mb-4 dark:bg-primary-light dark:border-purple-600 dark:text-white focus:ring-2 focus:ring-semi-purple" aria-label="Catatan tambahan"></textarea>
 
       <button @click="
-        if (!nama || !wa || (layanan === 'wa' && hari < 1) || (layanan === 'ptero' && gb < 1)) {
-          alert('Lengkapi data dan pastikan jumlah valid.');
+        if (!nama.trim() || !wa.trim() || (layanan === 'wa' && hari < 1) || (layanan === 'ptero' && gb < 1)) {
+          alert('Lengkapi semua data wajib dan pastikan jumlah valid.');
         } else {
+          isSubmitting = true;
           const total = layanan === 'pt' ? 25000 :
                         layanan === 'admin' ? 15000 :
                         layanan === 'reseller' ? 7000 :
@@ -96,50 +153,80 @@
                         gb * 1000;
 
           const text = `Halo Rear OfficiaL, saya ingin memesan layanan:%0A- Nama: ${nama}%0A- WhatsApp: ${wa}%0A- Layanan: ${layanan}%0A- Total Harga: Rp${total.toLocaleString('id-ID')}%0A- Catatan: ${catatan || '-'}%0A`;
-          window.open(`https://wa.me/6283839976528?text=${text}`, '_blank');
+          setTimeout(() => {
+            window.open(`https://wa.me/6283839976528?text=${text}`, '_blank');
+            isSubmitting = false;
+          }, 500);
         }"
-        class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">
-        Tekan Untuk Pesan Produk!
+        :disabled="isSubmitting"
+        class="w-full bg-gradient-to-r from-semi-purple to-primary text-white py-2 rounded hover:shadow-lg disabled:opacity-50 disabled:cursor-not-allowed transition"
+        aria-label="Kirim pesanan via WhatsApp">
+        <span x-show="!isSubmitting">Tekan Untuk Pesan Produk!</span>
+        <span x-show="isSubmitting" x-cloak>Mengirim...</span>
       </button>
     </div>
   </section>
 
   <!-- Metode Pembayaran -->
-  <section class="py-10 bg-blue-50 dark:bg-primary border-t border-blue-200 dark:border-gray-700">
+  <section class="py-10 bg-gradient-to-br from-purple-50 to-white dark:bg-gradient-to-br dark:from-primary-dark dark:to-primary border-t border-purple-200 dark:border-purple-700">
     <div class="max-w-xl mx-auto px-4 space-y-6">
-      <h2 class="text-xl font-semibold text-primary dark:text-blue-200 text-center">Metode Pembayaran</h2>
+      <h2 class="text-xl font-semibold text-primary dark:text-semi-purple text-center">Metode Pembayaran</h2>
 
       <!-- QRIS -->
-      <div class="bg-white dark:bg-primary-light rounded-lg shadow p-4 border-l-4 border-blue-500">
-        <h3 class="font-bold text-primary dark:text-blue-200">QRIS</h3>
+      <div class="bg-white dark:bg-primary-light rounded-lg shadow-lg p-4 border-l-4 border-semi-purple">
+        <h3 class="font-bold text-primary dark:text-semi-purple">QRIS</h3>
         <p class="text-sm text-gray-700 dark:text-gray-300">Scan kode QR di bawah ini:</p>
-        <img src="https://img1.pixhost.to/images/5718/598086344_rulzz-official.jpg" alt="QRIS Rear OfficiaL" class="w-full max-w-xs mx-auto border-4 border-blue-500 rounded mt-2">
+        <img src="https://img1.pixhost.to/images/5718/598086344_rulzz-official.jpg" alt="Kode QR QRIS untuk pembayaran Rear OfficiaL" class="w-full max-w-xs mx-auto border-4 border-semi-purple rounded mt-2 shadow-md" />
       </div>
 
       <!-- DANA -->
-      <div class="bg-white dark:bg-primary-light rounded-lg shadow p-4 border-l-4 border-blue-500">
-        <h3 class="font-bold text-primary dark:text-blue-200">DANA</h3>
+      <div class="bg-white dark:bg-primary-light rounded-lg shadow-lg p-4 border-l-4 border-semi-purple">
+        <h3 class="font-bold text-primary dark:text-semi-purple">DANA</h3>
         <p class="text-gray-700 dark:text-gray-300">Nomor: <span id="danaNomor">081269910013</span></p>
         <button onclick="navigator.clipboard.writeText('081269910013'); alert('Nomor disalin!');"
-                class="mt-2 px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700 text-sm">
+                class="mt-2 px-3 py-1 bg-gradient-to-r from-semi-purple to-primary text-white rounded hover:shadow-md text-sm transition" aria-label="Salin nomor DANA">
           Salin
         </button>
       </div>
 
       <!-- OVO -->
-      <div class="bg-white dark:bg-primary-light rounded-lg shadow p-4 border-l-4 border-blue-500">
-        <h3 class="font-bold text-primary dark:text-blue-200">OVO</h3>
+      <div class="bg-white dark:bg-primary-light rounded-lg shadow-lg p-4 border-l-4 border-semi-purple">
+        <h3 class="font-bold text-primary dark:text-semi-purple">OVO</h3>
         <p class="text-gray-700 dark:text-gray-300">Nomor: <span id="ovoNomor">083839976528</span></p>
         <button onclick="navigator.clipboard.writeText('083839976528'); alert('Nomor disalin!');"
-                class="mt-2 px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700 text-sm">
+                class="mt-2 px-3 py-1 bg-gradient-to-r from-semi-purple to-primary text-white rounded hover:shadow-md text-sm transition" aria-label="Salin nomor OVO">
           Salin
         </button>
       </div>
     </div>
   </section>
 
+  <!-- Kontak Section -->
+  <section id="kontak" class="py-10 bg-gradient-to-br from-purple-50 to-white dark:bg-gradient-to-br dark:from-primary-dark dark:to-primary-light">
+    <div class="max-w-4xl mx-auto px-4 text-center">
+      <h2 class="text-2xl font-semibold text-primary mb-4 dark:text-semi-purple">Kontak Kami</h2>
+      <p class="text-gray-700 dark:text-gray-300 mb-4">
+        Hubungi kami melalui berbagai platform untuk informasi lebih lanjut.
+      </p>
+      <div class="flex flex-col md:flex-row justify-center items-center space-y-4 md:space-y-0 md:space-x-4 mb-4">
+        <a href="https://wa.me/6283839976528" class="bg-gradient-to-r from-green-500 to-green-600 text-white px-4 py-2 rounded hover:shadow-lg transition flex items-center">
+          <img src="https://img1.pixhost.to/images/9510/652504583_rulzz-official.jpg" alt="Logo WhatsApp" class="w-6 h-6 rounded-full mr-2" />
+          WhatsApp Utama: +6283839976528
+        </a>
+        <a href="https://t.me/rearofficial" class="bg-gradient-to-r from-blue-500 to-blue-600 text-white px-4 py-2 rounded hover:shadow-lg transition flex items-center">
+          <img src="https://img1.pixhost.to/images/9510/652504583_rulzz-official.jpg" alt="Logo Telegram" class="w-6 h-6 rounded-full mr-2" />
+          Telegram: t.me/rearofficial
+        </a>
+        <a href="https://whatsapp.com/channel/0029Vb5ms4s59PwV7SyzEX2u" class="bg-gradient-to-r from-semi-purple to-primary text-white px-4 py-2 rounded hover:shadow-lg transition flex items-center">
+          <img src="https://img1.pixhost.to/images/9510/652504583_rulzz-official.jpg" alt="Logo Chanel WA" class="w-6 h-6 rounded-full mr-2" />
+          Chanel WA
+        </a>
+      </div>
+    </div>
+  </section>
+
   <!-- Footer -->
-  <footer class="bg-blue-100 dark:bg-primary text-center py-4 text-primary dark:text-blue-200">
+  <footer class="bg-gradient-to-r from-primary to-semi-purple text-center py-4 text-white">
     <p>&copy; 2025 Rear OfficiaL. Solusi Hosting Terbaik Masa Kini.</p>
   </footer>
 </body>
